argocd/config/argocd-server-ingress-tsnet.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress-tsnet
  namespace: argocd
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        name: https
  ingressClassName: tailscale
